R - Setter tilbake egen konfig for heaps (ihht template) (epd)